feat(main): adaptation front et middleware aux JWT et remplacement placeholders dashboard
